--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,14 @@
 # dependencies
 /client/node_modules
 /server/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
+.env
+
 # testing
 /coverage
-
-# production
-/build
 
 # misc
 .DS_Store
